--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         </ul>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
