Adding javascript from the js folder into the current folder

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 
         <div class="portfolio">
             <a href="./play.html" class="portfolio__item">
-                <img src="/images/bouncere.png" alt="" class="portfolio__img">
+                <img src="./images/bouncere.png" alt="" class="portfolio__img">
             </a>
             <a href="./tetris.html" class="portfolio__item">
-                <img src="/images/tetro.png" alt="" class="portfolio__img">
+                <img src="./images/tetro.png" alt="" class="portfolio__img">
             </a>
             <a href="./drawing.html" class="portfolio__item">
-                <img src="/images/drawing app.png" alt="" class="portfolio__img">
+                <img src="./images/drawing app.png" alt="" class="portfolio__img">
             </a>
             <a href="https://www.youtube.com/channel/UCocUNPbj84iuhWFCunj2lIw" class="portfolio__item">
-                <img src="/images/you2.PNG" alt="" class="portfolio__img">
+                <img src="./images/you2.PNG" alt="" class="portfolio__img">
             </a>
             <!-- <a href="#" class="portfolio__item">
                 <img src="/images/portfolio.png" alt="" class="portfolio__img">
