--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <footer class="footer">
-        <a href="" class="footer__link">Vibrancydevelopers@spaces.com</a>
+        <a href="https://sadsonmk.github.io/personal/" class="footer__link">sadsonmk</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
